--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
         <meta name="keywords" content="HTML">
 
         <meta name="author" content="Bardocz Daniel">
+
+        <link href="css/style.css" type="text/css" rel="stylesheet">
     </head>
 
     <body>
+
+        <header><h1>Mihajlo Idvorski Pupin</h1></header>
+
+<section>
+    <nav>
        <ul>
            <li><a href="index.html">Main Page</a></li>
 
@@ -22,10 +29,8 @@
 
            <li><a href="pupin-coils/index.html">Pupin Coils</a></li>
        </ul>
+    </nav></section><aside>
 
-       <hr>
-
-       <h1>Mihajlo Idvorski Pupin</h1>
 
        <img src="pupin.jpg" alt="imagine pupin">
 
@@ -34,7 +39,12 @@
        <p>Pupin is best known for his numerous patents, including a means of greatly extending the range of long-distance telephone communication by placing loading coils (of wire) at predetermined intervals along the transmitting wire (known as "pupinization").</p>
 
        <p>Pupin was a founding member of National Advisory Committee for Aeronautics (NACA) on March 3, 1915, which later became NASA.</p>
+   
+    </aside>
 
+    <footer>Copyright © Bardocz-Daniel</footer>
+
+ 
 
 
     </body>
